# Full-CMAKE-Non-Guide

./: CMakeLists.txt  Doxyfile.in  main.cpp
docs/: README.md
include/: example_class.h  fac.h  fib.h  pal.h  prm.h
src/: CMakeLists.txt  example_class.cpp  fac.cpp  fib.cpp  pal.cpp  prm.cpp
tests/: CMakeLists.txt  test_fac.cpp  test_fib.cpp  test_pal.cpp  test_prm.cpp
